fixed spacing in calculate

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -50,7 +50,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  margin-top: 35%;
+  margin-top: 5%;
 }
 
 .custom-text-field {
@@ -64,4 +64,7 @@
   text-align: center;
   display: flex;
   flex-direction: row;
+}
+.error {
+  border: 2px solid red;
 }
